force-app/main/default/objects/Item_Snapshot_Email_Alert__c/Item_Snapshot_Email_Alert__c.object-meta.xml
<CustomObject>
    <label>Item Snapshot Email Alert</label>
    <nameField>
        <label>Item Snapshot Email Alert Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Item Snapshot Email Alerts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>