force-app/main/default/objects/Item_Snapshot_Email_Alert__c/fields/senderAddress__c.field-meta.xml
<CustomField>
    <fullName>senderAddress__c</fullName>
    <label>senderAddress</label>
    <length>255</length>
    <type>Text</type>
</CustomField>