force-app/main/default/objects/Item_Snapshot_Email_Alert__c/fields/senderType__c.field-meta.xml
<CustomField>
    <fullName>senderType__c</fullName>
    <label>senderType</label>
    <length>255</length>
    <type>Text</type>
</CustomField>