force-app/main/default/objects/Item_Snapshot_Email_Alert__c/fields/template__c.field-meta.xml
<CustomField>
    <fullName>template__c</fullName>
    <label>template</label>
    <length>255</length>
    <type>Text</type>
</CustomField>